--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.4",
         "drupal/crop": "2.0-rc1",
+        "drupal/devel": "~1.0",
         "drupal/entity_block": "^1.0-beta1",
         "drupal/entity_browser": "2.0-alpha2",
         "drupal/entity_clone": "^1.0-alpha2",
